--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,3 +1,6 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
 @import 'rails_bootstrap_forms.css';
+@import "variable-overrides"; 
+@import "custom"; // Theme SASS
+@import "styles"; // Site SASS (assets/sass/styles.scss)
