Add footer partial, footer helper

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,4 +10,6 @@
     = javascript_importmap_tags
   %body
     = render 'navbar'
-    = yield
+    .container
+      = yield
+    = render 'footer'
