--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -146,6 +146,7 @@
 .btn-primary {
   background-color: $aedg-navy;
   color: $white;
+  border: none;
   padding: 0.75rem 1.5rem;
   border-radius: 0.5rem;
   text-decoration: none;
@@ -153,6 +154,7 @@
 
   &:hover {
     background-color: darken($aedg-navy, 10%);
+    color: $aedg-yellow;
   }
 }
 
