Remove unused styles from theme

--- a/app/views/communities/show.html.haml
+++ b/app/views/communities/show.html.haml
@@ -11,7 +11,7 @@
       = render partial: "dropdown", locals: { communities: @communities, current_community: @community }
   
 
-.container
+.container.py-4
   .row
     .col
       %h2=@community.name
