--- a/app/views/communities/show.html.haml
+++ b/app/views/communities/show.html.haml
@@ -16,110 +16,8 @@
     .col
       %h2=@community.name
       %hr
-  .row.g-4
-    %h3 Overview
-    .col
-      .card
-        .card-header
-          .card-title
-            Identifiers 
-        .card-body
-          %p
-            %b FIPS code: 
-            = @community.fips_code
-          %p
-            %b ANSI code:
-            = @community.ansi_code
-    .col
-      .card
-        .card-header
-          .card-title
-            Geography
-        .card-body
-          %p
-            %b Latitude:
-            = @community.latitude
-          %p
-            %b Longitude:
-            = @community.longitude
-
-    .col
-      .card
-        .card-header
-          .card-title
-            Population
-        .card-body
-
-    .col
-      .card
-        .card-header
-          .card-title
-            Education
-        .card-body
-    .col
-      .card
-        .card-header
-          .card-title
-            Election Districts
-        .card-body
-
-    .row.g-4
-      %h3 Fuel Prices
-      .col 
-        .card 
-          .card-header 
-            .card-title
-              Diesel
-          .card-body
-
-      .col 
-        .card 
-          .card-header 
-            .card-title
-              Gasoline
-          .card-body
-
-      .col 
-        .card
-          .card-header 
-            .card-title
-              Propane
-          .card-body
-
-    .row.g-4
-      %h3 Electricity
-      .col 
-        .card
-          .card-header 
-            .card-title
-              Utility
-          .card-body
-
-      .col 
-        .card 
-          .card-header 
-            .card-title
-              Fuel
-          .card-body
-
-      .col 
-        .card 
-          .card-header 
-            .card-title
-              Rates
-          .card-body
-
-      .col 
-        .card 
-          .card-header 
-            .card-title
-              Production
-          .card-body
-
-      .col 
-        .card 
-          .card-header 
-            .card-title
-              Sales, Revenue and Customers
-          .card-body   
+  - cards = ["overview_card", "fuel_prices_card", "electricity_card"]
+  - cards.each do |card|
+    .row.my-4.g-4
+      = render partial: card
 
