--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -3,3 +3,4 @@
 @import 'rails_bootstrap_forms.css';
 @import "variable-overrides"; 
 @import "styles"; // Site SASS (assets/sass/styles.scss)
+@import "styles/communities";
