Make sections collapsable

--- a/app/views/communities/sections/_background.html.haml
+++ b/app/views/communities/sections/_background.html.haml
@@ -1,9 +1,8 @@
-%h3 Overview
 .col
   .card
     .card-header
       .card-title
-        Identifiers 
+        %h5 Identifiers 
     .card-body
       %p
         %b FIPS code: 
@@ -15,7 +14,7 @@
   .card
     .card-header
       .card-title
-        Geography
+        %h5 Geography
     .card-body
       %p
         %b Latitude:
@@ -27,18 +26,18 @@
   .card
     .card-header
       .card-title
-        Population
+        %h5 Population
     .card-body
 
 .col
   .card
     .card-header
       .card-title
-        Education
+        %h5 Education
     .card-body
 .col
   .card
     .card-header
       .card-title
-        Election Districts
+        %h5 Election Districts
     .card-body
