--- a/app/views/communities/show.html.haml
+++ b/app/views/communities/show.html.haml
@@ -35,4 +35,4 @@
  
     %div.collapse.show{ id: section_id }
       .row.my-4.g-4
-        = render "communities/sections/#{section}"
+        = render "communities/sections/#{section}", community: @community
