--- a/app/views/communities/sections/_background.html.haml
+++ b/app/views/communities/sections/_background.html.haml
@@ -1,9 +1,9 @@
-.container.mx-4
+.container.p-4
   .row.g-5.align-items-start
     - if @community.name
-      .col-md-6.col-12= render 'communities/sections/background/geography', community: @community
+      .col= render 'communities/sections/background/geography', community: @community
     - if @community.transportation
-      .col-md-6.col-12= render 'communities/sections/background/transportation', transportation: @community.transportation
+      .col= render 'communities/sections/background/transportation', transportation: @community.transportation
     - if @community.population
       .col-md-6.col-12= render 'communities/sections/background/population_employment', community: @community.population
     - if @community.name
