Add controller to dynamically generate TOC/quick_nav based on h3 and h4 headings

--- a/app/views/communities/sections/_quick_nav.html.haml
+++ b/app/views/communities/sections/_quick_nav.html.haml
@@ -1,5 +1,4 @@
-.container.m-4
-  .quick-nav.mb-4{ data: { controller: "quick-navigation" } }
-    %ul.nav.nav-pills.flex-column.justify-content-center.gap-3{ data_quick_navigation_target: "toc" }
-  #toc
-    
+.container.mx-4
+  .quick-nav{ data: { controller: "toc" } }
+    .container-fluid
+      .row{ data: { toc_target: "toc" } }
