Fix id collision between collapsable sections and headings

--- a/app/views/communities/sections/_quick_nav.html.haml
+++ b/app/views/communities/sections/_quick_nav.html.haml
@@ -1,4 +1,4 @@
-.container.mx-4
+.container.p-4
   .quick-nav{ data: { controller: "toc" } }
     .container-fluid
       .row{ data: { toc_target: "toc" } }
