--- a/app/views/communities/sections/_electricity.html.haml
+++ b/app/views/communities/sections/_electricity.html.haml
@@ -1,4 +1,4 @@
-.container.mx-4
+.container.p-4
   .row.g-5.align-items-start
     - if @community.name
       .col-md-6.col-12= render 'communities/sections/electricity/utility', community: @community
