--- a/app/views/communities/sections/background/_geography.html.haml
+++ b/app/views/communities/sections/background/_geography.html.haml
@@ -14,6 +14,9 @@
         %th Regional Corporation
         %td= @community.regional_corporation.name
       %tr
+        %th Grid
+        %td= @community.grid.name.titleize
+      %tr
         %th Location
         %td= @community.location
       %tr
