--- a/app/views/communities/sections/electricity/_utility.html.haml
+++ b/app/views/communities/sections/electricity/_utility.html.haml
@@ -1,2 +1,13 @@
 .placeholder-card
   %h4 Utility
+  %table.table.table-striped.table-bordered
+    %thead
+      %tr
+        %th PCE Status
+        %th Utilities
+        %th Service Area
+    %tbody
+      %tr
+        %td= @community.pce_eligible ? "Eligible" : "Ineligible"
+        %td
+        %td
