Adding datatables js library
Also cleaning old yarn/npm settings

Signed-off-by: Will Fisher <whfisher@alaska.edu>

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,5 +1,6 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
 @import 'rails_bootstrap_forms.css';
-@import "variable-overrides"; 
+@import "variable-overrides";
 @import "styles"; // Site SASS (assets/sass/styles.scss)
+@import "datatables.net-bs5/css/dataTables.bootstrap5";
