--- a/app/views/communities/show.html.haml
+++ b/app/views/communities/show.html.haml
@@ -1,14 +1,14 @@
 .container.py-4
   .row
     %p#notice= notice
-  .row
-    .col.text-center
-      %h1 Community Summary
   .row.d-flex.justify-content-between
     .col
       = link_to 'Back', communities_path, class: 'btn btn-primary'
+    .col.text-center
+      %h1 Community Summary
     .col.text-end
-      = link_to 'Download/Print', '#', class: 'btn btn-primary'
+      %button.btn.btn-primary
+        Download/Print
 
   .row.align-items-center
     .col.text-center.py-5.my-4.community-dropdown-card
