--- a/app/views/communities/_dropdown.html.haml
+++ b/app/views/communities/_dropdown.html.haml
@@ -1,5 +1,3 @@
-%div.d-flex.justify-content-center{ data: { controller: "community-dropdown", action: "change->community-dropdown#update" } }
+.m-auto{ data: { controller: "community-dropdown", action: "change->community-dropdown#update" } }
   - community_array = @communities.map { |community| [community.name, url_for(community)] }
-  .dropdown-wrapper
-    = select_tag(:community, options_for_select(community_array, url_for(current_community) || ""), { prompt: '-- Select a Community --', class: "form-select community-dropdown", data: { community_dropdown_target: "select" } })
-    %i.bi.bi-chevron-down.dropdown-icon
+  = select_tag(:community, options_for_select(community_array, url_for(current_community) || ""), { prompt: '-- Select a Community --', class: "form-select rounded-5 fs-4 text-center", data: { community_dropdown_target: "select" } })
