--- a/app/views/communities/show.html.haml
+++ b/app/views/communities/show.html.haml
@@ -1,39 +1,38 @@
-.container.py-4
-  .row
-    %p#notice= notice
-  .row.d-flex.justify-content-between
-    .col
+%h1.mb-4.text-center Community Summary
+
+.row 
+  .col-md-3
+    .d-grid.gap-2
       = link_to 'Back', communities_path, class: 'btn btn-primary'
-    .col.text-center
-      %h1 Community Summary
-    .col.text-end
       %button.btn.btn-primary
         Download/Print
 
-  .row.align-items-center
-    .col.text-center.py-5.my-4.community-dropdown-card
-      %h2=@community.name
-      %p.lead=@borough.name
-      = render partial: "dropdown", locals: { communities: @communities, current_community: @community }
-  .row
-    .col
 
-- section_order = ["quick_nav", "electricity", "fuel_prices", "background", "related_datasets"]
+    %h4.mt-3 Quick Nav
+    = render "communities/sections/quick_nav", community: @community
 
-.container
-  - section_order.each do |section|
-    - section_id = "#{section.parameterize}-section"
+  .col-md-9
+    .card.mb-4
+      .card-body.text-center.p-5
+        %h2=@community.name
+        %p.lead=@borough.name
+        = render "dropdown", communities: @communities, current_community: @community 
 
-    .d-flex.align-items-center 
-      %button.collapse-btn.border-0.text-start.me-3{ 
+
+    - section_order = ["electricity", "fuel_prices", "background", "related_datasets"]
+
+    - section_order.each do |section|
+      - section_id = "#{section.parameterize}-section"
+
+      %button.collapse-btn.border-0.mb-3{ 
         type: "button", 
         data: { bs_toggle: "collapse", bs_target: "##{section_id}" }, 
         aria: { expanded: "true", controls: section_id }
       }
         %i.bi.bi-chevron-down.ms-2.arrow-icon
         %h3.m-0= section.titleize
- 
-    %div.collapse.show{ id: section_id }
-      .row.my-4.g-4
+
+      .collapse.show.p-4{ id: section_id }
         = render "communities/sections/#{section}", community: @community 
-    %hr/
+      
+      %hr/
