--- a/app/views/data_explorer/index.html.haml
+++ b/app/views/data_explorer/index.html.haml
@@ -1,2 +1,26 @@
-%h1 DataExplorer#index
-%p Find me in app/views/data_explorer/index.html.haml
+.container.my-5
+  .row
+    .col
+      .card.p-4.text-center
+        %h1 Explore Data
+
+        .d-flex.justify-content-center.mt-3
+          = link_to "#{@communities_count} Communities", communities_path, class: "btn btn-secondary mx-2"
+          = link_to "Partners", "#", class: "btn btn-secondary mx-2"
+          = link_to "View All Datasets", "#", class: "btn btn-primary mx-2"
+
+        %p.mt-3 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum.
+
+        .row.mt-3.justify-content-center
+          .col-lg-6
+            .input-group
+              %input.form-control{ type: "text", placeholder: "Search by...Try Education, Community, or Electricity" }
+              %button.btn.btn-secondary Search
+
+  .row.mt-5.g-4
+    .col-lg-4
+      = render 'by_location'
+    .col-lg-4
+      = render 'by_category'
+    .col-lg-4
+      = render 'featured_datasets'
