Update navigation links

--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -3,7 +3,7 @@
     .container
 
       / Brand
-      %a.navbar-brand{ href: root_url }
+      %a.navbar-brand{ href: root_path }
         %img{ src: asset_path('main_menu_logo.png'), alt: "Main Menu Logo", width: "125", class: "d-inline-block align-text-top" }
 
       / Menu Toggler
