Change controller name to datasets

--- a/app/views/datasets/explore.html.haml
+++ b/app/views/datasets/explore.html.haml
@@ -7,7 +7,7 @@
         .d-flex.justify-content-center.mt-3
           = link_to "#{@communities_count} Communities", communities_path, class: "btn btn-secondary mx-2"
           = link_to "Partners", "#", class: "btn btn-secondary mx-2"
-          = link_to "View All Datasets", "#", class: "btn btn-primary mx-2"
+          = link_to "View All Datasets", datasets_path, class: "btn btn-primary mx-2"
 
         %p.mt-3 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum.
 
