--- a/app/views/datasets/explore.html.haml
+++ b/app/views/datasets/explore.html.haml
@@ -13,7 +13,7 @@
 
         .row.mt-3.justify-content-center
           .col-lg-6
-            -# TODO: Replace with bootstrap_form_for and add search functionality
+            -# TODO: Replace with bootstrap_form_for and implement search functionality
             .input-group
               %input.form-control{ type: "text", placeholder: "Search by...Try Education, Community, or Electricity" }
               %button.btn.btn-secondary Search
