--- a/app/views/datasets/show.html.haml
+++ b/app/views/datasets/show.html.haml
@@ -1,1 +1,30 @@
-%h1 Datasets#show
+.container.my-5
+  .card.p-4
+    %h1 Dataset Name
+    %p Category
+
+  / Navigation Tabs
+  .d-flex.justify-content-between.align-items-center.mt-4
+    .nav.nav-tabs
+      %li.nav-item
+        = link_to "About", "#about", class: "nav-link active", data: { bs_toggle: "tab" }
+      %li.nav-item
+        = link_to "Data", "#data", class: "nav-link", data: { bs_toggle: "tab" }
+      %li.nav-item
+        = link_to "Related", "#related", class: "nav-link", data: { bs_toggle: "tab" }
+
+    / Export Button aligned to the right
+    = link_to "Export", "#", class: "btn btn-light"
+
+  / Tab Content
+  .tab-content.mt-3
+    #about.tab-pane.fade.show.active
+      = render "datasets/tabs/about"
+      
+    #data.tab-pane.fade
+      = render "datasets/tabs/data"
+
+    #related.tab-pane.fade
+      = render "datasets/tabs/related"
+
+  = link_to 'Back', datasets_path
