Add placeholders for tab content

--- a/app/views/datasets/tabs/_related.html.haml
+++ b/app/views/datasets/tabs/_related.html.haml
@@ -1,1 +1,3 @@
-%p This is the Related section content.
+/ TODO: Determine how to define the related datasets & implement
+/ For now, we will use placeholder data
+= render "datasets/datasets_list"
