--- a/app/views/datasets/show.html.haml
+++ b/app/views/datasets/show.html.haml
@@ -1,4 +1,5 @@
 .container.my-5
+  = link_to 'Back', datasets_path, class: "btn btn-primary my-4"
   .card.p-4
     %h1 Dataset Name
     %p Category
@@ -14,7 +15,7 @@
         = link_to "Related", "#related", class: "nav-link", data: { bs_toggle: "tab" }
 
     / Export Button aligned to the right
-    = link_to "Export", "#", class: "btn btn-light"
+    = link_to "Export", "#", class: "btn btn-primary"
 
   / Tab Content
   .tab-content.mt-3
@@ -27,4 +28,3 @@
     #related.tab-pane.fade
       = render "datasets/tabs/related"
 
-  = link_to 'Back', datasets_path
