--- a/app/views/datasets/tabs/_about.html.haml
+++ b/app/views/datasets/tabs/_about.html.haml
@@ -1,1 +1,13 @@
-%p This is the About section content.
+.container
+  .row
+    .col
+      %h3 Metadata
+      %hr
+      .placeholder-card
+      %br
+  .row
+    .col
+      %h3 What's in this Dataset?
+      %hr
+      .placeholder-card
+
