--- a/app/views/datasets/tabs/_data.html.haml
+++ b/app/views/datasets/tabs/_data.html.haml
@@ -1,1 +1,10 @@
-%p This is the Data section content.
+/ TODO: Replace with actual data
+%div{ data: { controller: 'datatables' } }
+  %table.table.table-stripped.border{ data: { datatables_target: 'table'} }
+    %thead
+      %tr
+        %th Field 1
+        %th Field 2
+        %th Field 3
+    %tbody
+      
