Change explore action/view to index, change index action/view to search

--- a/app/views/datasets/_featured_datasets.html.haml
+++ b/app/views/datasets/_featured_datasets.html.haml
@@ -16,4 +16,4 @@
             - dataset[:tags].each do |tag|
               %span.badge.bg-secondary.me-1= tag
 
-    = link_to "View All Datasets", "#", class: "btn btn-primary mt-3"
+    = link_to "View All Datasets", search_datasets_path, class: "btn btn-primary mt-3"
