--- a/app/views/communities/sections/electricity/production/_monthly.html.haml
+++ b/app/views/communities/sections/electricity/production/_monthly.html.haml
@@ -1,3 +1,14 @@
+// Chart view
+%div{ style: "max-width: 100%; height: 400px;" }
+  %canvas{ 
+    data: { 
+      controller: "chart",
+      chart_type_value: "line",
+      chart_url_value: "/communities/#{@community.id}/production_monthly_data",
+    }
+  }
+  
+// Tabular view
 %div{ data: { controller: 'datatables', datatables: { order_value: [3, 'asc']} }}
   %table.table.table-stripped.border{ data: { datatables_target: 'table'} }
     %thead
