Some more clean up for the explorer apps.
1. Expand the page to use the full width of the browser.
2. Adjust the ordering of the electricity section to flow better
3. Add example of showing data for utility seciton that doesn't use a
   table to save on horizontal space.
4. Move the community selection to the side bar as it felt like a lot of
   space was being taken up instead of being able to see the data we
wanted.

Signed-off-by: Will Fisher <whfisher@alaska.edu>

--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -1,6 +1,6 @@
 %header.main-header.mb-3
   %nav.navbar.navbar-expand-lg
-    .container
+    .container-fluid
 
       / Brand
       %a.navbar-brand{ href: root_path }
