--- a/app/views/communities/sections/electricity/_utility.html.haml
+++ b/app/views/communities/sections/electricity/_utility.html.haml
@@ -1,14 +1,18 @@
 .card
   %h4.card-header Utility
   .card-body
-    %table.table.table-striped
-      %thead
-        %tr
-          %th PCE Status
-          %th Utilities
-          %th Service Area
-      %tbody
-        %tr
-          %td= @community.pce_eligible ? "Eligible" : "Ineligible"
-          %td
-          %td
+    .row
+      .col-md-4.text-end.text-nowrap
+        %strong PCE Status:
+      .col
+        = @community.pce_eligible ? "Eligible" : "Ineligible"
+    .row 
+      .col-md-4.text-end.text-nowrap
+        %strong Utilities:
+      .col
+        %span
+    .row
+      .col-md-4.text-end.text-nowrap
+        %strong Service Area:
+      .col
+        %span
