--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,6 @@
     = javascript_importmap_tags
   %body
     = render 'header'
-    .container
+    .container-fluid
       = yield
     = render 'footer'
