--- a/app/views/datasets/_sort_dropdown.html.haml
+++ b/app/views/datasets/_sort_dropdown.html.haml
@@ -1,8 +1,4 @@
-
--#TODO: Replace with bootstrap_form_for and implement sort functionality
-.form-group
-  %label.text-muted.text-small{ for: "sort_by" } Sort By
-  %select.form-control#sort_by
-    %option Most Relevant
-    %option Newest
-    %option Oldest
+.row
+  = f.label :order, class: 'col-md-3 col-form-label', for: 'order'
+  .col
+    = f.select :order, options_for_select([['Most Relevant', 'relevance'], ['Newest', 'newest'], ['Oldest', 'oldest']], @search[:order]), {}, class: 'form-control', id: 'order'
