--- a/app/views/datasets/search.html.haml
+++ b/app/views/datasets/search.html.haml
@@ -1,22 +1,25 @@
-.container.my-5
-  .card.p-4
-    %h1 Data Explorer
-    %p Subtitle
+.card.p-4.mb-4
+  %h1 Data Explorer
+  %p Subtitle
 
-  .container.mt-5
-    .row.g-5
-      .col-lg-3
-        = render 'filters'
+.row.g-3.mb-3
+  .col-lg-3
+    = render 'filters'
 
-      .col-lg-9
-        .row.justify-content-between.align-items-end.mb-4
-          .col-lg-3
-            = render 'sort_dropdown'
+  .col-lg-9
+    = form_with url: search_datasets_path, method: :get do |f|
+      .row.justify-content-between.align-items-end.mb-3
+        .col-md-4
+          .input-group.input-group-lg 
+            %span.input-group-text 
+              Order By
+            = f.select :order, options_for_select([['Most Relevant', 'relevance'], ['Newest', 'newest'], ['Oldest', 'oldest']], @search[:order]), {}, class: 'form-control', id: 'order'
 
-          .col-lg-6
-            -# TODO: Replace with bootstrap_form_for and implement search functionality
-            .input-group  
-              %input.form-control{ type: "text", placeholder: "Search Keywords, Datasets..." }
-              %button.btn.btn-secondary Search
+        .col
+          .input-group.input-group-lg  
+            %span.input-group-text 
+              Search
+            = f.text_field :search, value: @search[:search], class: 'form-control', placeholder: 'Search Keywords, Datasets...'
+            = f.submit 'Search', class: 'btn btn-secondary'
 
-        = render 'datasets_list'
+    = render partial: 'dataset', collection: @metadata, as: :metadatum
