--- a/app/views/communities/sections/electricity/_production.html.haml
+++ b/app/views/communities/sections/electricity/_production.html.haml
@@ -1,18 +1,20 @@
+- grid_name = @community.grid.name.titleize
 .card
   %h4.card-header Production
   .card-body.p-3
-    %p= @community.grid.name.titleize
+    %p= grid_name
     %p.text-muted.small This data is generated at the grid level, not community-specific.
     
     .d-flex.justify-content-between.align-items-center
       .nav.nav-tabs
-        %li.nav-item
-          = link_to "Monthly", "#monthly", class: "nav-link active", data: { bs_toggle: "tab" }
+        - if @community.grid.monthly_generations.any?
+          %li.nav-item
+            = link_to "Monthly", "#monthly", class: "nav-link active", data: { bs_toggle: "tab" }
         %li.nav-item
           = link_to "Yearly", "#yearly", class: "nav-link", data: { bs_toggle: "tab" }
 
     .tab-content
       #monthly.tab-pane.fade.show.active
-        = render "communities/sections/electricity/production/monthly", community: @community
+        = render "communities/sections/electricity/production/monthly", community: @community, grid_name: grid_name
 
       #yearly.tab-pane.fade
