--- a/app/views/communities/sections/electricity/production/_monthly.html.haml
+++ b/app/views/communities/sections/electricity/production/_monthly.html.haml
@@ -1,38 +1,30 @@
-- latest_year = @community.grid.monthly_generations.maximum(:year)
-- chart_title = "#{@community.grid.name.titleize} Net Generation by Month (#{latest_year})"
-- monthly_generations = @community.grid.monthly_generations.where(year: latest_year).group(:month).sum(:net_generation_mwh)
-
-- max_generation = monthly_generations.values.max || 0
-- min_generation = monthly_generations.values.min || 0
-- avg_generation = (monthly_generations.values.sum.to_f / monthly_generations.size).round(2)
-- max_month = monthly_generations.key(max_generation)
-- min_month = monthly_generations.key(min_generation)
-
+- stats = @community.grid.monthly_generations.generation_stats
+- chart_title = "#{grid_name} Net Generation by Month (#{stats[:latest_year]})"
 .row.justify-content-center.bg-light.p-3.rounded.shadow-sm.m-3
   .col-auto
     %i.bi-bar-chart-line-fill.mx-1
     %strong.mx-1 Average:
-    %span.text-primary= "#{avg_generation} MWh"
+    %span.text-primary= "#{stats[:avg_generation]} MWh"
 
   .col-auto
     %i.bi-arrow-up-right-circle.mx-1
     %strong.mx-1 Max:
-    %span.text-success= "#{max_generation} MWh" 
-    %small.text-muted= "(#{Date::MONTHNAMES[max_month]})" 
+    %span.text-success= "#{stats[:max_generation]} MWh" 
+    %small.text-muted= "(#{Date::MONTHNAMES[stats[:max_month]]})" 
 
   .col-auto
     %i.bi-arrow-down-right-circle.mx-1
     %strong.mx-1 Min:
-    %span.text-danger= "#{min_generation} MWh" 
-    %small.text-muted= "(#{Date::MONTHNAMES[min_month]})" 
+    %span.text-danger= "#{stats[:min_generation]} MWh" 
+    %small.text-muted= "(#{Date::MONTHNAMES[stats[:min_month]]})" 
 
   .col-auto
     %i.bi-calendar.mx-1
     %strong.mx-1 Year:
-    %span.text-muted= latest_year
+    %span.text-muted= stats[:latest_year]
 
 // Chart view
-= line_chart production_monthly_community_charts_path(community_id: @community.id), id: "monthly-production-chart", title: chart_title, xtitle: "Month", ytitle: "Net Generation (MWh)", suffix: "MWh", download: {background: "#ffffff", filename: chart_title, format: "png"}
+= line_chart production_monthly_community_charts_path(@community), title: chart_title, xtitle: "Month", ytitle: "Net Generation", suffix: "MWh", download: {background: "#ffffff", filename: chart_title.parameterize, format: "png"}
 
 // Tabular view
 %div{ data: { controller: 'datatables', datatables: { order_value: [3, 'asc']} }}
